week2/.metadata/.plugins/org.eclipse.cdt.ui/MoveBook.build.log
19:17:44 **** Incremental Build of configuration Debug for project MoveBook ****
make all 
Building file: ../src/MoveBook.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/MoveBook.d" -MT"src/MoveBook.d" -o "src/MoveBook.o" "../src/MoveBook.cpp"
../src/MoveBook.cpp: In function ‘int main()’:
../src/MoveBook.cpp:52:4: warning: ‘auto’ changes meaning in C++11; please remove it [-Wc++0x-compat]
    auto b = ws.lower_bound(s[i]);
    ^
../src/MoveBook.cpp:52:9: error: ‘b’ does not name a type
    auto b = ws.lower_bound(s[i]);
         ^
../src/MoveBook.cpp:53:8: error: ‘b’ was not declared in this scope
    if (b != ws.end()) {
        ^
make: *** [src/MoveBook.o] Error 1

19:17:44 Build Finished (took 209ms)

